--- a/billiard_csv_tensorflow_model_trainer.ipynb
+++ b/billiard_csv_tensorflow_model_trainer.ipynb
@@ -50,7 +50,7 @@
         "!unzip -o /content/colab_train_big.zip\n",
         "!pip3 install keras-tuner"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "\n",
         "CHECKPOINT_DIR = \"/content/\""
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -138,7 +138,7 @@
         "id": "ZVR1nxboHX45"
       },
       "source": [],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +164,7 @@
         "\n",
         "import IPython"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -201,7 +201,7 @@
         "        label_name = \"SCORE\"\n",
         "    )"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +226,7 @@
         "        if (col_name == 'X1' or col_name == 'X2' or col_name == 'X3' or col_name == 'X4' or col_name == 'Y1' or col_name == 'Y2' or col_name == 'Y3' or col_name == 'Y4'):\n",
         "          model_inputs[col_name] = tf.keras.Input(shape=(1,), name=col_name, dtype=col_values.dtype)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -241,7 +241,7 @@
       "source": [
         "model_inputs"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -283,7 +283,7 @@
         "    float_inputs[col_name] = col_input\n",
         "    \n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -298,7 +298,7 @@
       "source": [
         "float_inputs\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,29 +335,29 @@
         "    \n",
         "    norm = tf.keras.layers.experimental.preprocessing.Normalization()\n",
         "\n",
-        "    for batch, _ in get_dataset(batch_size=DUMMY_BATCH_SIZE).take(1):\n",
-        "        data = []\n",
+        "    #for batch, _ in get_dataset(batch_size=DUMMY_BATCH_SIZE).take(1):\n",
+        "    #    data = []\n",
         "        \n",
-        "        for k in inputs.keys():\n",
-        "            data.append(np.array(batch[k]))    \n",
+        "    #    for k in inputs.keys():\n",
+        "    #        data.append(np.array(batch[k]))    \n",
         "        \n",
-        "        data = np.array(data)\n",
-        "        data = np.transpose(data)    \n",
+        "    #    data = np.array(data)\n",
+        "    #    data = np.transpose(data)    \n",
         "\n",
         "        norm.adapt(data)\n",
         "\n",
         "    # mean_log = []\n",
         "\n",
-        "    for batch, _ in get_dataset(batch_size=BATCH_SIZE):\n",
-        "        data = []\n",
+        "    #for batch, _ in get_dataset(batch_size=BATCH_SIZE):\n",
+        "    #    data = []\n",
         "        \n",
-        "        for k in inputs.keys():\n",
-        "            data.append(np.array(batch[k]))    \n",
+        "    #    for k in inputs.keys():\n",
+        "    #        data.append(np.array(batch[k]))    \n",
         "        \n",
-        "        data = np.array(data)\n",
-        "        data = np.transpose(data)\n",
+        "    #    data = np.array(data)\n",
+        "    #    data = np.transpose(data)\n",
         "\n",
-        "        norm.adapt(data)        \n",
+        "    #    norm.adapt(data)        \n",
         "        # mean_log.append(norm.mean.numpy())    \n",
         "\n",
         "    if concat is not None:\n",
@@ -367,7 +367,7 @@
         "    \n",
         "    return numeric_layer"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -387,7 +387,7 @@
       "source": [
         "float_layer = numerical_input_processor(float_inputs)\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -402,7 +402,7 @@
       "source": [
         "float_layer"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,7 +433,7 @@
       "source": [
         "preprocessing_head = tf.keras.Model(model_inputs, float_layer)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -449,7 +449,7 @@
       "source": [
         "tf.keras.utils.plot_model(model = preprocessing_head, rankdir=\"LR\", dpi=72, show_shapes=True, expand_nested=True, to_file=\"preprocessing_head.png\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -496,7 +496,7 @@
         "#     \"fare\" : np.array([7.25]),\n",
         "# })"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -516,7 +516,7 @@
       "source": [
         "preprocessed_outputs = preprocessing_head(model_inputs)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -527,7 +527,7 @@
       "source": [
         "num_preprocessed_outputs = list(preprocessed_outputs.shape)[-1]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -542,7 +542,7 @@
       "source": [
         "num_preprocessed_outputs"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -576,7 +576,7 @@
         "for _ in get_dataset(batch_size=BATCH_SIZE):\n",
         "    dataset_size += 1"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -587,7 +587,7 @@
       "source": [
         "train_size = int(TRAIN_FRAC * dataset_size)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -603,7 +603,7 @@
         "print(dataset_size)\n",
         "print(train_size)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,7 +635,7 @@
         "train_dataset = dataset.take(train_size)\n",
         "val_dataset = dataset.skip(train_size)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -659,7 +659,7 @@
         "train_dataset = train_dataset.cache().prefetch(buffer_size=AUTOTUNE)\n",
         "val_dataset = val_dataset.cache().prefetch(buffer_size=AUTOTUNE)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -680,7 +680,7 @@
         "early_stopping_callback = tf.keras.callbacks.EarlyStopping(monitor='loss', patience=5)\n",
         "checkpoint_callback = tf.keras.callbacks.ModelCheckpoint(filepath=os.path.join(CHECKPOINT_DIR, \"M.{epoch:02d}-{loss:.2f}\"))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -694,7 +694,7 @@
         "    checkpoint_callback,\n",
         "]"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -707,7 +707,7 @@
         "    def on_train_end(*args, **kwargs):\n",
         "        IPython.display.clear_output(wait = True)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -763,7 +763,7 @@
         "    return model\n",
         "\n"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -788,7 +788,7 @@
         "                     directory = 'tuner_dir',\n",
         "                     project_name = 'tuner')"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -804,7 +804,7 @@
         "    callbacks = [ClearTrainingOutput()]\n",
         ")"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -815,7 +815,7 @@
       "source": [
         "best_hps = tuner.get_best_hyperparameters(num_trials = 1)[0]"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -839,7 +839,7 @@
       "source": [
         "best_hps.values"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -866,7 +866,7 @@
       "source": [
         "model = tuner.hypermodel.build(best_hps)"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -881,7 +881,7 @@
       "source": [
         "model.summary()"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +946,7 @@
       "source": [
         "tf.keras.utils.plot_model(model = model, rankdir=\"LR\", dpi=96, show_shapes=True, expand_nested=True, to_file=\"model.png\")"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -983,7 +983,7 @@
         "# loss with un-trained model\n",
         "model.evaluate(train_dataset)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1029,7 +1029,7 @@
         "# val_loss with un-trained model\n",
         "model.evaluate(val_dataset)"
       ],
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
